--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>theWeather</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
 
@@ -12,11 +13,10 @@
   <div class="background"></div>
   <div class="main">
     <div class="header__container">
-      <div class="search">
-        <form class="" action="#" method="post">
-          <label for="search__city"></label>
-          <input type="text" name="search__city" value="" placeholder="search your city">
-          <input type="submit" name="" value="Submit">
+      <div class="container__item">
+        <form class="form">
+          <input type="text" class="form__field" placeholder="Search your city" />
+          <button type="button" class="btn btn--primary btn--inside">Search</button>
         </form>
       </div>
       <div class="header">
@@ -33,6 +33,9 @@
       <p>tramonto: 18.00 della sera</p>
     </div>
     <div class="main__footer">
+      <span class="material-icons hi-icon hi-icon-location">
+        near_me
+      </span>
       <h3>theWeather</h3>
     </div>
   </div>
