--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <div class="background"></div>
   <div class="main">
     <div class="header__container">
-      <div class="header">
+      <div class="header__form">
         <form class="form">
           <input type="text" class="form__field" placeholder="Search your city" />
           <button type="button" class="btn">Search</button>
@@ -25,6 +25,7 @@
         <img src='icon/rainy.png' alt="">
       </div>
       <div class="main__info">
+        <p>State: Italia</p>
         <p>temperature: 28°</p>
         <p>Wind: 90nodi</p>
         <p>wind direction : est sud-est</p>
