add code for getting data from server and display it

--- a/src/index.html
+++ b/src/index.html
@@ -16,21 +16,14 @@
       <div class="header__form">
         <form class="form">
           <input type="text" class="form__field" placeholder="Search your city" />
-          <button type="button" class="btn">Search</button>
+          <input type="submit" class="btn" value="Search"></input>
         </form>
       </div>
       <div class="city">
-        <h1>Lecce</h1>
-        <h3>Nubi sparse</h3>
-        <img src='icon/rainy.png' alt="">
+
       </div>
       <div class="main__info">
-        <p>State: Italia</p>
-        <p>temperature: 28°</p>
-        <p>Wind: 90nodi</p>
-        <p>wind direction : est sud-est</p>
-        <p>alba: 6,30 del mattino</p>
-        <p>tramonto: 18.00 della sera</p>
+
       </div>
     </div>
     <footer class="main__footer">
